--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,9 +28,16 @@ switch (OperatingSystem.current()) {
 repositories {
     // Use JCenter for resolving dependencies.
     jcenter()
+	mavenCentral()
+	  maven {
+		url "https://oss.sonatype.org/content/repositories/snapshots/"
+	}
 }
-
+project.ext.jomlVersion = "1.10.0"
 dependencies {
+
+	compile "org.joml:joml:${jomlVersion}"
+
     // Use JUnit Jupiter API for testing.
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.6.2'
 
