--- a/.settings/org.eclipse.buildship.core.prefs
+++ b/.settings/org.eclipse.buildship.core.prefs
@@ -5,7 +5,7 @@ connection.gradle.distribution=GRADLE_DISTRIBUTION(VERSION(6.8))
 connection.project.dir=
 eclipse.preferences.version=1
 gradle.user.home=
-java.home=/Library/Java/JavaVirtualMachines/jdk-13.0.1.jdk/Contents/Home
+java.home=C\:/Program Files/AdoptOpenJDK/jdk-11.0.9.101-hotspot
 jvm.arguments=
 offline.mode=false
 override.workspace.settings=true
